Adicionando Login linkado ao index

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </ul>
               </div>
               <div class="quote_btn-container">
-                <a href="">
+                <a href="login.html">
                   <i class="fa fa-user" aria-hidden="true"></i>
                   <span>
                     Entrar
@@ -632,21 +632,6 @@
   <!-- info section -->
   <section class="info_section ">
     <div class="container">
-      <div class="info_top">
-        <div class="info_logo">
-          <a href="">
-            <img src="images/logo.png" alt="">
-          </a>
-        </div>
-        <div class="info_form">
-          <form action="">
-            <input type="email" placeholder="Your email">
-            <button>
-              Subscribe
-            </button>
-          </form>
-        </div>
-      </div>
       <div class="info_bottom layout_padding2">
         <div class="row info_main_row">
           <div class="col-md-6 col-lg-3">
