--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -29,73 +30,130 @@
 
 <body class="sub_page">
 
-<div class="hero_area">
-  <!-- Botão Voltar no canto superior direito -->
-  <div class="top-right-button">
-    <a href="index.html" class="btn btn-secondary">Voltar</a>
+  <div class="hero_area">
+    <!-- Botão Voltar no canto superior direito -->
+    <div class="top-right-button">
+      <a href="index.html" class="btn btn-secondary">Voltar</a>
+    </div>
+
+    <header class="header_section">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+          <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="Logo">
+          </a>
+        </nav>
+      </div>
+    </header>
   </div>
 
-  <header class="header_section">
+  <section class="contact_section layout_padding-bottom">
     <div class="container">
-      <nav class="navbar navbar-expand-lg custom_nav-container">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" alt="Logo">
-        </a>
-      </nav>
-    </div>
-  </header>
-</div>
-
-<section class="contact_section layout_padding-bottom">
-  <div class="container">
-    <div class="heading_container">
-      <h2>Login</h2>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="form_container">
-          <form action="login_process.php" method="POST">
-            <div class="form-group">
-              <input type="text" name="username" class="form-control" placeholder="Usuário" required>
-            </div>
-            <div class="form-group">
-              <input type="password" name="password" class="form-control" placeholder="Senha" required>
-            </div>
-            <div class="form-group">
-              <select name="user_type" class="form-control" required>
-                <option value="">Selecione o Tipo de Usuário</option>
-                <option value="admin">Administrador</option>
-                <option value="user">Usuário Comum</option>
-              </select>
-            </div>
-            <div class="btn_box text-center">
-              <button type="submit" class="btn btn-primary">
-                Entrar
-              </button>
-            </div>
-          </form>
+      <div class="heading_container">
+        <h2>Login</h2>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="form_container">
+            <form action="login_process.php" method="POST">
+              <div class="form-group">
+                <input type="text" name="username" class="form-control" placeholder="Usuário" required>
+              </div>
+              <div class="form-group">
+                <input type="password" name="password" class="form-control" placeholder="Senha" required>
+              </div>
+              <div class="form-group">
+                <select name="user_type" class="form-control" required>
+                  <option value="">Selecione o Tipo de Usuário</option>
+                  <option value="admin">Administrador</option>
+                  <option value="user">Usuário Comum</option>
+                </select>
+              </div>
+              <div class="btn_box text-center">
+                <button type="submit" class="btn btn-primary">
+                  Entrar
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
 
-<!-- footer section -->
-<footer class="footer_section">
-  <div class="container">
-    <p>
-      &copy; <span id="displayYear"></span> Todos os direitos reservados - Mico
-    </p>
-  </div>
-</footer>
-<!-- footer section -->
+    <div class="row justify-content-center">
+      <div class="col-md-6">
 
-<!-- jQuery -->
-<script src="js/jquery-3.4.1.min.js"></script>
-<!-- bootstrap js -->
-<script src="js/bootstrap.js"></script>
-<!-- custom js -->
-<script src="js/custom.js"></script>
+        <h2>Login do Usuário (CPF ou CNPJ)</h2>
+
+        <form id="form-login" onsubmit="fazerLogin(event)">
+          <label for="documento">CPF ou CNPJ:</label><br>
+          <input type="text" id="documento" name="documento" required><br><br>
+
+          <label for="senha">Senha:</label><br>
+          <input type="password" id="senha" name="senha" required><br><br>
+
+          <button type="submit">Entrar</button>
+        </form>
+
+        <hr>
+      </div>
+    </div>
+
+
+  </section>
+
+
+
+
+
+
+
+  <!-- footer section -->
+  <footer class="footer_section">
+    <div class="container">
+      <p>
+        &copy; <span id="displayYear"></span> Todos os direitos reservados - Mico
+      </p>
+    </div>
+  </footer>
+  <!-- footer section -->
+
+  <!-- jQuery -->
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <!-- bootstrap js -->
+  <script src="js/bootstrap.js"></script>
+  <!-- custom js -->
+  <script src="js/custom.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+  <script>
+    function fazerLogin(event) {
+      event.preventDefault(); // Evita o formulário recarregar a página
+
+      const documento = document.getElementById('documento').value;
+      const senha = document.getElementById('senha').value;
+
+      axios.post('https://ciclovida.ki6.com.br/ciclovida/api_php/login.php', {
+        documento: documento,
+        senha: senha
+      })
+        .then(function (response) {
+          console.log(response.data);
+          alert('Login realizado com sucesso!');
+
+          localStorage.setItem('usuarioLogado', JSON.stringify(response.data.usuario));
+
+          // Redirecionar ou carregar sistema
+          // window.location.href = 'sistema.html';
+        })
+        .catch(function (error) {
+          console.error('Erro ao fazer login:', error);
+          alert('Documento ou senha inválidos!');
+        });
+    }
+  </script>
+
 
 </body>
+
 </html>
