--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
   <!--owl slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- nice select -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha256-mLBIhmBvigTFWPSCtvdu6a76T+3Xyt+K571hupeFLg4=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css"
+    integrity="sha256-mLBIhmBvigTFWPSCtvdu6a76T+3Xyt+K571hupeFLg4=" crossorigin="anonymous" />
   <!-- datepicker -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">
   <!-- Custom styles for this template -->
@@ -45,10 +47,11 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-              <img class= logo src="images/Logo2.svg" alt="">
+            <img class=logo src="images/Logo2.svg" alt="">
 
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
             </button>
 
@@ -70,6 +73,8 @@
                 </ul>
               </div>
               <div class="quote_btn-container">
+
+                <div id="labelUsuario"></div>
                 <a href="login.html">
                   <i class="fa fa-user" aria-hidden="true"></i>
                   <span>
@@ -115,7 +120,8 @@
                       </span>
                     </h1>
                     <p>
-                      Quer fazer parte do nosso ecossistema? Entre em contato conosco e saiba mais sobre como podemos ajudar você!
+                      Quer fazer parte do nosso ecossistema? Entre em contato conosco e saiba mais sobre como podemos
+                      ajudar você!
                     </p>
                     <a href="">
                       Fale Conosco
@@ -147,7 +153,8 @@
                       </span>
                     </h1>
                     <p>
-                      Quer fazer parte do nosso ecossistema? Entre em contato conosco e saiba mais sobre como podemos ajudar você a alcançar seus objetivos de saúde e bem-estar.
+                      Quer fazer parte do nosso ecossistema? Entre em contato conosco e saiba mais sobre como podemos
+                      ajudar você a alcançar seus objetivos de saúde e bem-estar.
                     </p>
                     <a href="">
                       Fale Conosco
@@ -179,7 +186,8 @@
                       </span>
                     </h1>
                     <p>
-                      when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
+                      when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                      distribution of letters, as opposed to
                     </p>
                     <a href="">
                       Fale Conosco
@@ -294,7 +302,10 @@
               </h2>
             </div>
             <p>
-              has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors
+              has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',
+              making it look like readable English. Many desktop publishing packages and web page editors has a
+              more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it
+              look like readable English. Many desktop publishing packages and web page editors
             </p>
             <a href="">
               Read More
@@ -331,7 +342,8 @@
                 Nephrologist Care
               </h4>
               <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure there isn't anything
+                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
+                there isn't anything
               </p>
               <a href="">
                 Read More
@@ -349,7 +361,8 @@
                 Eye Care
               </h4>
               <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure there isn't anything
+                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
+                there isn't anything
               </p>
               <a href="">
                 Read More
@@ -367,7 +380,8 @@
                 Pediatrician Clinic
               </h4>
               <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure there isn't anything
+                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
+                there isn't anything
               </p>
               <a href="">
                 Read More
@@ -385,7 +399,8 @@
                 Parental Care
               </h4>
               <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure there isn't anything
+                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
+                there isn't anything
               </p>
               <a href="">
                 Read More
@@ -531,7 +546,11 @@
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
+                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover
+                many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text,
+                and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now
+                use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
+                still in their infancy. Various
               </p>
             </div>
           </div>
@@ -549,7 +568,11 @@
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
+                uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model
+                text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use
+                Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
+                still in their infancy.
               </p>
             </div>
           </div>
@@ -567,7 +590,11 @@
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
+                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
+                uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text,
+                and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now
+                use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
+                still in their infancy. Various
               </p>
             </div>
           </div>
@@ -768,18 +795,30 @@
   </footer>
   <!-- footer section -->
 
+
+
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
   <!-- bootstrap js -->
   <script src="js/bootstrap.js"></script>
   <!-- nice select -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"
+    integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
   <!-- owl slider -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <!-- datepicker -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
+
+
+
+  <script>
+    var usuarioLogado = localStorage.getItem('usuarioLogado');
+    var labelUsuario = document.getElementById('labelUsuario');
+    labelUsuario.innerHTML = usuarioLogado ? 'Usuário: ' + JSON.parse(usuarioLogado).documento : 'Usuário não logado';
+  </script>
+
 
 
 </body>
