--- a/cadastro.html
+++ b/cadastro.html
@@ -7,13 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
 
-  <title>Mico</title>
-
+  <title>Cadastro</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -39,283 +34,64 @@
 
 <body class="sub_page">
 
-  <div class="hero_area">
-    <!-- header section strats -->
-    <header class="header_section">
-      <div class="header_top">
-        <div class="container">
-          <div class="contact_nav">
-            <a href="">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>
-                Call : +01 123455678990
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-envelope" aria-hidden="true"></i>
-              <span>
-                Email : demo@gmail.com
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Location
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="header_bottom">
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
-              <img src="images/logo.png" alt="">
-            </a>
-            </a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class=""> </span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
-                <ul class="navbar-nav  ">
-                  <li class="nav-item ">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="about.html"> About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cadastro.html">cadastro</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="treatment.html">Treatment</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="doctor.html">Doctors</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="testimonial.html">Testimonial</a>
-                  </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="quote_btn-container">
-                <a href="">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>
-                    Login
-                  </span>
-                </a>
-                <a href="">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>
-                    Sign Up
-                  </span>
-                </a>
-                <form class="form-inline">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                  </button>
-                </form>
-              </div>
-            </div>
-          </nav>
-        </div>
-      </div>
-    </header>
-    <!-- end header section -->
-  </div>
-
-
   <!-- contact section -->
   <section class="contact_section layout_padding-bottom">
     <div class="container">
       <div class="heading_container">
         <h2>
-          Get In Touch
+          Cadastro
         </h2>
       </div>
       <div class="row">
         <div class="col-md-7">
           <div class="form_container">
-            <form action="">
+            <form id="form-cadastro" onsubmit="realizarCadastro(event)">
               <div>
-                <input type="text" placeholder="Full Name" />
+                <input required id="nome" type="text" placeholder="Nome completo ou nome da empresa" />
+              </div>            
+              <div>
+                <input required id="email" type="email" placeholder="Email" />
+              </div>            
+              <div>
+                <input required type="text" id="telefone" placeholder="Número de celular" />
               </div>
               <div>
-                <input type="email" placeholder="Email" />
+                <label>
+                  <input type="radio" name="tipoPessoa" value="fisica" checked> Pessoa Física
+                </label>
+                <label>
+                  <input type="radio" name="tipoPessoa" value="juridica"> Pessoa Jurídica
+                </label>
               </div>
-              <div>
-                <input type="text" placeholder="Phone Number" />
+              <div id="cpfField" style="margin-top: 10px;">
+                <input type="text" id="cpf" placeholder="CPF" />
               </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
+              <div id="cnpjField" style="margin-top: 10px; display: none;">
+                <input type="text" id="cnpj" placeholder="CNPJ" />
               </div>
+              <div id="password" style="margin-top: 10px;">
+                <input required type="password" id="password" placeholder="Senha" />
+              </div>
+              <div id="password_confirm" style="margin-top: 10px;">
+                <input required type="password" id="password_confirm" placeholder="Confirme sua senha" />
+              </div>
+              <p>Já possui uma conta?</p>
+              <a href="login.html" class="btn btn-outline-primary btn-sm m-1">Ir para Login</a>
+              <a href="index.html" class="btn btn-outline-secondary btn-sm m-1">Voltar para Home</a>
               <div class="btn_box">
-                <button>
+                <button type="submit" class="btn btn-primary">
                   SEND
                 </button>
+                </div>
               </div>
             </form>
           </div>
         </div>
-        <div class="col-md-5">
-          <div class="img-box">
-            <img src="images/contact-img.jpg" alt="">
-          </div>
-        </div>
       </div>
     </div>
   </section>
+  
   <!-- end contact section -->
-
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="info_top">
-        <div class="info_logo">
-          <a href="">
-            <img src="images/logo.sgv" alt="">
-          </a>
-        </div>
-        <div class="info_form">
-          <form action="">
-            <input type="email" placeholder="Your email">
-            <button>
-              Subscribe
-            </button>
-          </form>
-        </div>
-      </div>
-      <div class="info_bottom layout_padding2">
-        <div class="row info_main_row">
-          <div class="col-md-6 col-lg-3">
-            <h5>
-              Address
-            </h5>
-            <div class="info_contact">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Location
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Call +01 1234567890
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope"></i>
-                <span>
-                  demo@gmail.com
-                </span>
-              </a>
-            </div>
-            <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_links">
-              <h5>
-                Useful link
-              </h5>
-              <div class="info_links_menu">
-                <a href="index.html">
-                  Home
-                </a>
-                <a href="about.html">
-                  About
-                </a>
-                <a href="treatment.html">
-                  Treatment
-                </a>
-                <a href="doctor.html">
-                  Doctors
-                </a>
-                <a href="testimonial.html">
-                  Testimonial
-                </a>
-                <a class="active" href="contact.html">
-                  Contact us
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                LATEST POSTS
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post1.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post2.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                News
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post3.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post4.png" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end info_section -->
-
 
   <!-- footer section -->
   <footer class="footer_section">
@@ -339,9 +115,72 @@
   <!-- datepicker -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
   <!-- custom js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
   <script src="js/custom.js"></script>
+  <script>
+    $(document).ready(function() {
+      // Máscaras
+      $('#telefone').mask('(00) 00000-0000');
+      $('#cpf').mask('000.000.000-00');
+      $('#cnpj').mask('00.000.000/0000-00');
+  
+      // Mostrar/ocultar CPF ou CNPJ
+      $('input[name="tipoPessoa"]').change(function() {
+        if ($(this).val() === 'fisica') {
+          $('#cpfField').show();
+          $('#cnpjField').hide();
+        } else {
+          $('#cpfField').hide();
+          $('#cnpjField').show();
+        }
+      });
+    });
+    function realizarCadastro(event) {
+    event.preventDefault();
 
+    // Obter os valores dos campos
+    const nome = document.getElementById('nome').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const telefone = document.getElementById('telefone').value.trim();
+    const tipoPessoa = document.querySelector('input[name="tipoPessoa"]:checked').value;
+    const cpf = document.getElementById('cpf').value.trim();
+    const cnpj = document.getElementById('cnpj').value.trim();
+    const senha = document.getElementById('password').value;
+    const senhaConfirm = document.getElementById('password_confirm').value;
 
+    // Verificação simples de senha
+    if (senha !== senhaConfirm) {
+      alert('As senhas não coincidem!');
+      return;
+    }
+
+    // Determinar o documento correto
+    const documento = tipoPessoa === 'fisica' ? cpf : cnpj;
+
+    // Validação simples
+    if (!documento) {
+      alert('Por favor, preencha todos os campos obrigatórios.');
+      return;
+    }
+
+    const dadosCadastro = {
+      nome,
+      email,
+      telefone,
+      tipoPessoa,
+      documento,
+      senha
+    };
+    axios.post('http://ciclovida.ki6.com.br/ciclovida/api_php/usuarios.php', dadosCadastro)
+      .then(function (response) {
+        alert('Cadastro realizado com sucesso!');
+        window.location.href = 'login.html';
+      })
+      .catch(function (error) {
+        console.error('Erro ao realizar cadastro:', error);
+        alert('Erro ao realizar cadastro. Tente novamente.');
+      });
+  }
+  </script>
 </body>
-
 </html>
