--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
                     <a class="nav-link" href="index.html"> Início<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="cadastro.html"> Catálogo</a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="about.html"> Sobre</a>
                   </li>
                   <li class="nav-item">
@@ -81,7 +78,7 @@
                     Entrar
                   </span>
                 </a>
-                <a href="">
+                <a href="cadastro.html">
                   <i class="fa fa-user" aria-hidden="true"></i>
                   <span>
                     Cadastrar
