--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                     <a class="nav-link" href="about.html"> Sobre</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contato</a>
+                    <a class="nav-link" href="contact.html">Catálogo</a>
                   </li>
                 </ul>
               </div>
@@ -101,47 +101,92 @@
       margin-top: 50px; /* Adjust the value as needed */
     }
   </style>
-  <!-- seção de contato -->
-  <section class="contact_section layout_padding-bottom">
+  <section class="donation_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          Entre em Contato
+          Alimentos disponíveis
         </h2>
+        <p>Escolha os alimentos que deseja receber para ajudar sua família. Entre os alimentos disponíveis estão itens básicos como arroz, feijão, açúcar, óleo, farinha e outros produtos essenciais para quem está em situação de vulnerabilidade.</p>
       </div>
       <div class="row">
-        <div class="col-md-7">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Nome Completo" />
-              </div>
-              <div>
-                <input type="email" placeholder="E-mail" />
-              </div>
-              <div>
-                <input type="text" placeholder="Número de Telefone" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Mensagem" />
-              </div>
-              <div class="btn_box">
-                <button>
-                  ENVIAR
-                </button>
-              </div>
-            </form>
+        <div class="col-md-4">
+          <div class="donation_box">
+            <div class="img-box" style="font-size: 50px; text-align: center;">
+              🫘
+            </div>
+            <div class="detail-box">
+              <h5>1kg de Feijão</h5>
+              <p>Descrição breve do alimento 1.</p>
+              <a href="donation1.html" class="btn btn-success">Receber</a>
+            </div>
           </div>
         </div>
-        <div class="col-md-5">
-          <div class="img-box">
-            <img src="images/contact-img.jpg" alt="">
+        <div class="col-md-4">
+          <div class="donation_box">
+            <div class="img-box" style="font-size: 50px; text-align: center;">
+              🍬
+            </div>
+            <div class="detail-box">
+              <h5>1kg de Açúcar</h5>
+              <p>Descrição breve do alimento 2.</p>
+              <a href="donation2.html" class="btn btn-success">Receber</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="donation_box">
+            <div class="img-box" style="font-size: 50px; text-align: center;">
+              🛢️
+            </div>
+            <div class="detail-box">
+              <h5>1L de Óleo</h5>
+              <p>Descrição breve do alimento 3.</p>
+              <a href="donation3.html" class="btn btn-success">Receber</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-md-4">
+          <div class="donation_box">
+            <div class="img-box" style="font-size: 50px; text-align: center;">
+              🍚
+            </div>
+            <div class="detail-box">
+              <h5>1kg de Arroz</h5>
+              <p>Descrição breve do alimento 4.</p>
+              <a href="donation4.html" class="btn btn-success">Receber</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="donation_box">
+            <div class="img-box" style="font-size: 50px; text-align: center;">
+              🥖
+            </div>
+            <div class="detail-box">
+              <h5>1kg de Farinha</h5>
+              <p>Descrição breve do alimento 5.</p>
+              <a href="donation5.html" class="btn btn-success">Receber</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="donation_box">
+            <div class="img-box" style="font-size: 50px; text-align: center;">
+              🥫
+            </div>
+            <div class="detail-box">
+              <h5>1kg de Macarrão</h5>
+              <p>Descrição breve do alimento 6.</p>
+              <a href="donation6.html" class="btn btn-success">Receber</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
   <!-- footer section -->
   <footer class="footer_section">
     <div class="container">
