--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="about.html"> Sobre</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contato</a>
+                    <a class="nav-link" href="contact.html">Catálogo</a>
                   </li>
                 </ul>
               </div>
